# reader_service

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  egg.sh  prestart.sh  pyproject.toml
app/: main.py
app/api/routes/: predictor.py
app/core/: config.py
app/libml/: utils.py
app/models/: prediction.py
app/services/: functional.py  predict.py
app/tests/: reader_test.py
deploy/prod/: deploy.yaml
deploy/stg/: deploy.yaml
require/: fastapi.txt  ml.txt  reader.txt
scripts/: aws_ecr_push.sh
tests/: reader_test.py
