[tool.poetry]
name = "reader_service"
version = "0.1.0"
description = "reader service for iqradre_reader"
authors = ["nunenuh@gmail.com"]

[tool.poetry.dependencies]
python = "^3.7.12"
uvicorn = "^0.11.3"
fastapi = "^0.54.1"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.4"
emails = "^0.5.15"
raven = "^6.10.0"
gunicorn = "^20.0.4"
pytest = "^5.4.1"
loguru = "^0.4.0"
joblib = "^0.15.1"
fire = "^0.4.0" 



# Git dependencies
# iqradre_reader = { git = "git@github.com:nunenuh/iqradre_reader.git", branch = "main",  rev = "0.1.0" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
autopep8 = "^1.4.4"
ipdb = "^0.12.3"
poethepoet = "^0.10.0"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
